--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/PUBLIC-METHODS/end-wall-sliding.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/PUBLIC-METHODS/end-wall-sliding.html
@@ -27,12 +27,12 @@
         <p>
             Resets certain values when the character exits the wall slide.
             <br> <br>
-            This function should be called after calling <a class="redirect-link" href="start-wall-sliding.html">StartWallSliding</a> to reset the character's state back to default.
+            This function should be called after calling <a class="redirect-link" href="start-wall-sliding.html">StartWallSliding</a> in order for the character state to be reset to their default state.
         </p>
         <br>
         <p>
-            This is an example of how you can call <b>EndWallSliding</b> in your script utilizing the <a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>
-            class, to help with the wall and ground detection:
+            This is an example of how you can call the function in your script, utilizing the <a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>
+            class, for convinience:
         </p>
 <pre class="code-block">
 using UnityEngine;
@@ -42,18 +42,18 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 {
     [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="https://docs.unity3d.com/Manual/class-CapsuleCollider2D.html">CapsuleCollider2D</a> m_Collider;
     [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../character-slide.html">CharacterSlide</a> characterSlide;
-    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] privte <a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a> envQuery;
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a> envQuery;
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
     {
         characterSlide = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-slide.html">CharacterSlide</a>&gt;();
-        envQuey = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>&gt;();
+        envQuery = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>&gt;();
         envQuery.<a class="redirect-link" href="../PUBLIC-METHODS/set-active-collider.html">SetActiveCollider</a>(m_Collider);
     }
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
-        if (envQuery.<a class="redirect-link" href="../../ENV-QUERY/PUBLIC-METHODS/ground-check.html">GroundCheck</a>() && envQuery.<a class="redirect-link" href="../../ENV-QUERY/PUBLIC-METHODS/wall-in-front.html">WallInFront</a>())
+        if (!envQuery.<a class="redirect-link" href="../../ENV-QUERY/PUBLIC-METHODS/ground-check.html">GroundCheck</a>() && envQuery.<a class="redirect-link" href="../../ENV-QUERY/PUBLIC-METHODS/wall-in-front.html">WallInFront</a>())
         {
             characterSlide.<a class="redirect-link" href="start-wall-sliding.html">StartWallSliding</a>();
         }
