--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/character-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/character-slide.html
@@ -31,6 +31,20 @@
         </p>
         <br>
         <div class="table-division">
+            <span class="table-title">Public Properties</span>
+            <table>
+                <tr>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/floor-slide-deceleration.html">FloorSlideDeceleration</a></td>
+                    <td class="description">The speed at which the character decelerates during a floor slide.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/wall-slide-acceleration.html">WallSlideAcceleration</a></td>
+                    <td class="description">The speed at which the character accelerates during a wall slide.</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table-division">
             <span class="table-title">Public Methods</span>
             <table>
                 <tr>
