Character Combat Update.
Revisions.

--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-attack-dealt-damage.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-attack-dealt-damage.html
@@ -82,9 +82,9 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         if (e.attackData == exampleAttack)
         {
             string attackName = e.attackData.AttackName;
-            GameObject damagedObject = e.damagedObject;
+            string damagedObjectName = e.damagedObject.name;
 
-            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The attack: " + attackName + ", dealt damage to the: " + damagedObject.name);
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The attack: " + attackName + ", dealt damage to the: " + damagedObjectName);
         }
     }
 }
