General Documentation Update.
Added files for "Manual" links for some classes.

--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -19,27 +19,27 @@
             <table>
                 <tr>
                     <td class="label-classes">HumanoidController</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/HUMANOID-CONTROLLER/humanoid-controller.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CharacterMovement</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/CHARACTER-MOVEMENT/character-movement.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-MOVEMENT/character-movement.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CharacterSlide</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/CHARACTER-SLIDE/character-slide.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-SLIDE/character-slide.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CharacterLedgeGrab</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/CHARACTER-LEDGE-GRAB/character-ledge-grab.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CharacterDash</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/CHARACTER-DASH/character-dash.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-DASH/character-dash.html">Scripting</a></td>
                 </tr>
             </table>
@@ -50,7 +50,7 @@
             <table>
                 <tr>
                     <td class="label">CharacterCombat</td>
-                    <td><a class="redirect-link" href="#">Manual</a></td>
+                    <td><a class="redirect-link" href="MANUAL/CHARACTER-COMBAT/character-combat.html">Manual</a></td>
                     <td><a class="redirect-link" href="SCRIPTING/CHARACTER-COMBAT/character-combat.html">Scripting</a></td>
                 </tr>
                 <tr>
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>
                     <td class="label-classes">CombatSystemProjectile</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">Scripting</a></td>
                 </tr>
                 <tr>
@@ -76,7 +76,7 @@
             <table>
                 <tr>
                     <td class="label">CharacterEnvironmentalQuery</td>
-                    <td><a class="redirect-link" href="#">Manual</a></td>
+                    <td><a class="redirect-link" href="MANUAL/ENV-QUERY/env-query.html">Manual</a></td>
                     <td><a class="redirect-link" href="SCRIPTING/ENV-QUERY/env-quey.html">Scripting</a></td>
                 </tr>
                 <tr>
